<resources>
    <string name="app_name">TraceurRecopem</string>
    <string name="app_name_w_space">Traceur Recopem</string>
    <string name="answer_yes">Oui</string>
    <string name="answer_no">Non</string>
    <string name="activity_main_hello">"'Ia ora na "</string>
    <string name="activity_login_name_hint">Nom du collaborateur</string>
    <string name="activity_login_id_hint">Identifiant du collaborateur</string>
    <string name="activity_login_boat_question">Utilises-tu un bateau/pirogue ?</string>
    <string name="activity_login_boat_owner_question">En es-tu le propriétaire ?</string>
    <string name="activity_login_pref_location_sale">Lieu préféré de vente en bord de route ?</string>
    <string-array name="activity_login_boat_list">
        <item>"empty"</item>
        <item>"motorboat"</item>
        <item>"outrigger"</item>
        <item>"swim"</item>
        <item>"from_shore"</item>
    </string-array>
    <string name="activity_login_tetia">Cartes de Tetia et Maiao ?</string>
    <string name="activity_login_prof">Carte profondeur ?</string>
    <string name="main_notification_title">Traceur ReCoPeM</string>
    <string name="main_notification_message">Es-tu allé à la pêche?</string>
    <string name="activity_menu_start_tracking_btn">"Je vais à la peche\n\nLancer traceur"</string>
    <string name="activity_menu_start_manual_track_btn">Tracé manuel sur carte\n(Sortie de pêche sans GPS)</string>
    <string name="activity_menu_track_list_btn">"Liste de mes tracés"</string>
    <string name="activity_menu_map_alone_btn">"Regarder la carte\n\nSans lancer traceur"</string>
    <string name="activity_map_and_track_waypoint_dialog_title">Mon marqueur</string>
    <string name="activity_map_and_track_waypoint_dialog_delete_title">Supprimer le marqueur?</string>
    <string name="activity_map_and_track_menu_prof">Profondeur</string>
    <string name="activity_map_and_track_menu_tetia">Tetiaroa</string>
    <string name="activity_map_and_track_menu_maiao">Maiao</string>
    <string name="activity_map_and_track_menu_moorea">Moorea</string>
    <string name="activity_map_and_track_menu_stop_tracking">Arrêter Tracé</string>
    <string name="dialog_waypoint_name_text">Nom du marqueur</string>
    <string name="dialog_waypoint_name_input_hint">Ecris un nom !</string>
    <string name="activity_map_alone_menu_back">Retour</string>
    <string name="activity_map_alone_menu_delete">Effacer dernier point</string>
    <string name="activity_map_alone_menu_done">Terminé</string>
    <string name="activity_manual_track_title">Créer un tracé manuel</string>
    <string name="activity_manual_track_input_day_question">Quel jour es-tu parti ?</string>
    <string name="activity_manual_track_input_dep_time_question">A quelle heure es-tu parti ?</string>
    <string name="activity_manual_track_input_arr_time_question">A quelle heure es-tu revenu ?</string>
    <string name="activity_manual_track_btn_text">Choisi</string>
    <string name="activity_track_list_empty">Aucun tracé enregistré</string>
    <string name="track_item_track_method">Méth. tracé = </string>
    <string name="track_item_data_added">Questions = </string>
    <string name="track_item_pic_added">Photos = </string>
    <string name="track_item_exported">Exporté = </string>
    <string name="track_item_emailed">Envoyé (email) = </string>
    <string name="track_item_trackpoints_count">Nb de points: </string>
    <string name="menu_newtrack">Ajouter un tracé manuellement</string>
    <string name="menu_exportall">Exporter tous les tracés</string>
    <string name="activity_track_detail_export_message_success">"Photos et questionnaire enregistrés\nMauruuru!"</string>
    <string name="activity_track_detail_zip_task_msg_error">"Erreur"</string>
    <string name="activity_track_detail_zip_email">"Préparation de l'envoi..."</string>
    <string name="menu_delete">Supprimer tracé</string>
    <string name="activity_track_detail_delete_dialog_title">SUPPRESSION TRACE</string>
    <string name="activity_track_detail_delete_dialog_message">Veux tu supprimer ce tracé de façon définitive ?</string>
    <string name="menu_adddata">Remplir Questionnaire</string>
    <string name="menu_addpicture">Ajouter des photos de poissons</string>
    <string name="menu_exportGPX">Exporter tracé</string>
    <string name="menu_send_data_pic">Envoi des données</string>
    <string name="activity_track_detail_wifi_dialog_title">PAS DE CONNEXION WIFI</string>
    <string name="activity_track_detail_wifi_dialog_message">"Tu n'es pas connecté au WiFi.
        \n\nIl est déconseillé d'envoyer les données, cela peut te coûter de l'argent (ou finir ton crédit)."</string>
    <string name="activity_track_detail_wifi_dialog_yes">POURSUIVRE QUAND MEME</string>
    <string name="activity_track_detail_wifi_dialog_no">ANNULER</string>
    <string name="activity_show_picture_deleting_image">Suppression image...</string>
    <string name="trackmgr_exporting_prepare">Preparing export&#8230;</string>
    <string name="trackmgr_exporting">Exporting track #{0}&#8230;</string>
    <string name="trackmgr_export_error">Unable to export track: {0}</string>
    <string name="trackmgr_exportall_confirm">All tracks will be exported, which could take a long time. Are you sure?</string>
    <string name="trackmgr_newtrack_error">Unable to create a new track: {0}</string>
    <string name="gpx_track_name">Tracked with Traceur ReCoPeM</string>
    <string name="gpx_hdop_approximation_cmt">Warning: HDOP values aren\'t the HDOP as returned by the GPS device. They\'re approximated from the location accuracy in meters.</string>
    <string name="tracking_notification_title">Enregristrement tracé #</string>
    <string name="tracking_notification_content">"Tapez ici pour ouvrir l'application."</string>
    <string name="activity_display_map_dialog_GPS_disabled_title">GPS Eteint</string>
    <string name="activity_display_map_dialog_GPS_disabled_content">"Le GPS est éteint, il faut l'allumer."</string>
    <string name="activity_display_map_dialog_GPS_disabled_yes">ALLUMER GPS</string>
    <string name="activity_display_map_dialog_GPS_disabled_no">""</string>
    <string name="error_create_track_dir">Unable to create track folder %s</string>
    <string name="error_externalstorage_not_writable">Unable to write to external storage.</string>
    <string name="various_unit_meters">m</string>
    <string name="various_accuracy">Accuracy</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="data_input_menu_next">Suivant</string>
    <string name="data_input_gear_question">Quel type de pêche ?"</string>
    <string name="data_input_gear_question_detail">Plusieurs choix possibles"</string>
    <string name="data_input_gear_question_fusil">Pupuhi</string>
    <string name="data_input_gear_question_filet">Upea</string>
    <string name="data_input_gear_question_ligne">Ligne</string>
    <string name="data_input_gear_question_rama">Rama (Langoustes, Vana etc.)</string>
    <string name="data_input_gear_question_cage">Faa</string>
    <string name="data_input_gear_question_harpon">Patia</string>
    <string name="data_input_gear_question_autre">Autre:</string>
    <string name="data_input_gear_question_autre_detail">Si autre, détaille ici:</string>
    <string name="data_input_boat_question">Quel moyen de navigation ?"</string>
    <string name="data_input_boat_question_motor">Bateau à moteur</string>
    <string name="data_input_boat_question_pirogue">Pirogue</string>
    <string name="data_input_boat_question_nage">Nage/Boston</string>
    <string name="data_input_boat_question_shore">Aucun, depuis le bord (tahatai)</string>
    <string name="data_input_boat_question_boat_owner">Es-tu propriétaire du bateau ?</string>
    <string name="data_input_boat_question_boat_owner_outrigger">Es-tu propriétaire de la pirogue ?</string>
    <string name="data_input_wind_question">Force du vent ?"</string>
    <string name="data_input_wind_question_1">1\nFaible</string>
    <string name="data_input_wind_question_2">2\nMoyen</string>
    <string name="data_input_wind_question_3">3\nFort</string>
    <string name="data_input_current_question">Force du courant ?"</string>
    <string name="data_input_current_question_1">1\nFaible</string>
    <string name="data_input_current_question_2">2\nMoyen</string>
    <string name="data_input_current_question_3">3\nFort</string>
    <string name="data_input_crew_question">Es-tu parti pêcher seul ?"</string>
    <string name="data_input_crew_question_N">Combien de pêcheurs sont partis avec toi ?</string>
    <string name="data_input_crew_question_who">Qui est parti avec toi ?</string>
    <string name="data_input_crew_question_who_details">Pas obligatoire.</string>
    <string name="data_input_crew_input_who">"Noms ou Relations (exple: Mon cousin, mon voisin, mon ami)"</string>
    <string name="data_input_catch_sale_question">As-tu VENDU du poisson en\nBORD DE ROUTE ?"</string>
    <string name="data_input_catch_sale_question_N">Quelles quantités ?</string>
    <string-array name="data_input_catch_sale_type">
        <item>Choisi</item>
        <item>tui</item>
        <item>poissons</item>
        <item>kilos</item>
        <item>paquet</item>
    </string-array>
    <string name="data_input_catch_sale_question_price">"Prix pour un : "</string>
    <string-array name="data_input_catch_sale_price">
        <item>Prix pour un</item>
        <item>500F</item>
        <item>1000F</item>
        <item>1500F</item>
        <item>2000F</item>
        <item>2500F</item>
        <item>3000F</item>
        <item>3500F</item>
        <item>4000F</item>
        <item>5000F</item>
        <item>6000F</item>
        <item>7000F</item>
        <item>8000F</item>
        <item>9000F</item>
    </string-array>
    <string name="data_input_catch_sale_question_where">"Vendu où :"</string>
    <string-array name="data_input_catch_sale_where">
        <item>"Choisi le lieu"</item>
        <item>Maatea</item>
        <item>Haumi</item>
        <item>Afareaitu</item>
        <item>Patae</item>
        <item>Vaiare</item>
        <item>Teavaro</item>
        <item>Temae</item>
        <item>Tiaia</item>
        <item>Maharepa</item>
        <item>Paopao</item>
        <item>Pihaena</item>
        <item>Vaihere</item>
        <item>Opunohu</item>
        <item>Urufara</item>
        <item>Papetoai</item>
        <item>Tiahura</item>
        <item>Varari</item>
        <item>Haapiti</item>
        <item>Vaianae</item>
        <item>Atiha</item>
    </string-array>
    <string name="data_input_catch_sale_question_details">"Ajoute des détails, si besoin."</string>
    <string name="data_input_catch_sale_question_pic">"As-tu pris une photo du poisson/de ta prise ?"</string>
    <string name="data_input_catch_order_question">As-tu VENDU du poisson par\nCOMMANDES ?"</string>
    <string name="data_input_catch_order_question_pic_if_sale_pic">"Les poissons vendus par commandes sont-ils visibles sur tes photos ?"</string>
    <string name="data_input_catch_give_question">As-tu DONNE du poisson ?"</string>
    <string name="data_input_catch_give_question_where">"Donné où :"</string>
    <string name="data_input_catch_give_question_pic_if_sale_pic">"Les poissons donnés sont-ils visibles sur tes photos ?"</string>
    <string name="data_input_catch_cons_question">As-tu GARDE du poisson pour toi ?"</string>
    <string name="data_input_catch_cons_question_pic_if_sale_pic">"Les poissons gardés sont-ils visibles sur tes photos ?"</string>
    <string name="data_input_fish_caught_intro">Clique sur les poissons que tu as pêchés pour indiquer leur nombre</string>
    <string name="data_input_fish_caught_other_fish">"Les autres poissons que j'ai attrapé : "</string>
    <string name="dialog_fish_picker_text">Quantités pêchées</string>
</resources>