<?xml version="1.0" encoding="utf-8"?>
<!--suppress XmlUnusedNamespaceDeclaration -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controller.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/activity_login_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/activity_login_name_hint"
                />

            <EditText
                android:id="@+id/activity_login_id_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/activity_login_id_hint"
                />

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="20dp"
            android:text="@string/activity_login_boat_question"
            style="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"

            />
            <Spinner
                android:id="@+id/activity_login_boat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="20dp"
                android:text="@string/activity_login_boat_owner_question"
                style="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"

                />
            <CheckBox android:id="@+id/activity_login_boat_owner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_yes"
                android:layout_marginLeft="40dp"
                android:layout_marginBottom="10dp"
                style="@android:style/TextAppearance.Medium"
                android:onClick="onCheckboxClicked"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="20dp"
                android:text="@string/activity_login_pref_location_sale"
                style="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"

                />

            <Spinner
                android:id="@+id/activity_login_where_sale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"/>

            <CheckBox android:id="@+id/activity_login_tetia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_login_tetia"
                android:layout_marginLeft="40dp"
                android:layout_marginBottom="10dp"
                style="@android:style/TextAppearance.Medium"
                android:onClick="onCheckboxClicked"/>

            <CheckBox android:id="@+id/activity_login_prof"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_login_prof"
                android:layout_marginLeft="40dp"
                android:layout_marginBottom="10dp"
                style="@android:style/TextAppearance.Medium"
                android:onClick="onCheckboxClicked"/>

            <Button
                android:id="@+id/activity_login_submit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="30dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/answer_validate"/>



        </LinearLayout>
    </ScrollView>


</LinearLayout>